# svc/home-api/src/main/java/com/breathinghouse/homeapi/history/SensorType.java
@@ -1,0 +1,6 @@
+package com.breathinghouse.homeapi.history;
+
+public enum SensorType {
+    ROOM,
+    AIR
+}
